--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -21,7 +21,7 @@
         android:inputType="textEmailAddress"
         android:textColor="@color/text_blue"
         android:textStyle="normal"
-        android:textColorHint="@color/text_blue"
+        android:textColorHint="@color/hint_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -39,7 +39,7 @@
         android:inputType="textPassword"
         android:textColor="@color/text_blue"
         android:textStyle="normal"
-        android:textColorHint="@color/text_blue"
+        android:textColorHint="@color/hint_blue"
         app:layout_constraintEnd_toEndOf="@+id/email_login_textbox"
         app:layout_constraintStart_toStartOf="@+id/email_login_textbox"
         app:layout_constraintTop_toBottomOf="@+id/email_login_textbox" />
