--- a/app/src/main/res/layout/activity_display_term.xml
+++ b/app/src/main/res/layout/activity_display_term.xml
@@ -7,10 +7,54 @@
     android:background="@color/bg_teal"
     tools:context=".DisplayTerm">
 
+    <ScrollView
+        android:id="@+id/mnemonics_scroll_view"
+        android:layout_width="250dp"
+        android:layout_height="114dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/rounded_corners_textbox_bg"
+        app:layout_constraintEnd_toEndOf="@+id/translations_scroll_view"
+        app:layout_constraintStart_toStartOf="@+id/translations_scroll_view"
+        app:layout_constraintTop_toBottomOf="@+id/translations_scroll_view">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
+
+    <ScrollView
+        android:id="@+id/translations_scroll_view"
+        android:layout_width="250dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/rounded_corners_textbox_bg"
+        app:layout_constraintEnd_toEndOf="@+id/right_arrow_image"
+        app:layout_constraintStart_toEndOf="@+id/translations_hardcoded_text"
+        app:layout_constraintTop_toTopOf="@+id/translations_hardcoded_text">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
+
+    <TextView
+        android:id="@+id/mnemonics_hardcoded_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/cabin"
+        android:text="Mnemonics:"
+        android:textColor="@color/text_blue"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/left_arrow_image"
+        app:layout_constraintTop_toBottomOf="@+id/translations_scroll_view" />
+
     <TextView
         android:id="@+id/term_name_textbox"
         android:layout_width="209dp"
-        android:layout_height="62dp"
+        android:layout_height="0dp"
         android:layout_marginTop="24dp"
         android:color="@color/text_blue"
         android:fontFamily="@font/cabin"
@@ -55,5 +99,150 @@
         app:layout_constraintStart_toEndOf="@+id/term_name_textbox"
         app:layout_constraintTop_toTopOf="@+id/term_name_textbox"
         app:srcCompat="@drawable/opaquerightarrow" />
+
+    <ImageView
+        android:id="@+id/mars_logo_image"
+        android:layout_width="62dp"
+        android:layout_height="78dp"
+        android:layout_marginStart="86dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toStartOf="@+id/term_unlock_level_textbox"
+        app:layout_constraintHorizontal_bias="0.535"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/term_unlock_level_textbox"
+        app:srcCompat="@drawable/alphamars" />
+
+    <ImageView
+        android:id="@+id/venus_logo_image"
+        android:layout_width="73dp"
+        android:layout_height="73dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="86dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.631"
+        app:layout_constraintStart_toEndOf="@+id/term_unlock_level_textbox"
+        app:layout_constraintTop_toBottomOf="@+id/term_unlock_level_textbox"
+        app:srcCompat="@drawable/alphavenus" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="131dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="204dp" />
+
+    <TextView
+        android:id="@+id/translations_hardcoded_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/cabin"
+        android:text="Translations:"
+        android:textColor="@color/text_blue"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/left_arrow_image"
+        app:layout_constraintTop_toBottomOf="@+id/mars_logo_image" />
+
+    <TextView
+        android:id="@+id/add_synonym_text"
+        android:layout_width="98dp"
+        android:layout_height="26dp"
+        android:layout_marginTop="2dp"
+        android:fontFamily="@font/cabin"
+        android:text="add synonym +"
+        android:textColor="@color/hint_blue"
+        app:layout_constraintStart_toStartOf="@+id/translations_hardcoded_text"
+        app:layout_constraintTop_toBottomOf="@+id/translations_hardcoded_text" />
+
+    <TextView
+        android:id="@+id/add_mnemonic_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:fontFamily="@font/cabin"
+        android:text="add mnemonic +"
+        android:textColor="@color/hint_blue"
+        app:layout_constraintStart_toStartOf="@+id/mnemonics_hardcoded_text"
+        app:layout_constraintTop_toBottomOf="@+id/mnemonics_hardcoded_text" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="94dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/cabin"
+        android:text="Your progress"
+        android:textAlignment="center"
+        android:textColor="@color/text_blue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mnemonics_scroll_view" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="0dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/rounded_corners_textbox_bg"
+        android:progress="50"
+        android:progressTint="@color/text_blue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+    <TextView
+        android:id="@+id/current_level_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/cabin"
+        android:text="5"
+        android:textColor="@color/text_blue"
+        app:layout_constraintBottom_toBottomOf="@+id/textView4"
+        app:layout_constraintStart_toStartOf="@+id/progressBar" />
+
+    <TextView
+        android:id="@+id/next_level_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/cabin"
+        android:text="6"
+        android:textColor="@color/text_blue"
+        app:layout_constraintBottom_toBottomOf="@+id/textView4"
+        app:layout_constraintEnd_toEndOf="@+id/progressBar" />
+
+    <TextView
+        android:id="@+id/next_review_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/cabin"
+        android:text="Next review:"
+        android:textColor="@color/text_blue"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar"
+        tools:layout_editor_absoluteX="24dp" />
+
+    <EditText
+        android:id="@+id/next_review_date"
+        android:layout_width="178dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:ems="10"
+        android:fontFamily="@font/cabin"
+        android:inputType="date"
+        android:text="23/01/2021     13:00"
+        android:textColor="@color/text_blue"
+        app:layout_constraintBottom_toBottomOf="@+id/next_review_text"
+        app:layout_constraintStart_toEndOf="@+id/next_review_text"
+        app:layout_constraintTop_toTopOf="@+id/next_review_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
