--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
-    <item android:id="@+id/menu_sign_out"
-        android:title="Sign out"/>
-    <item android:id="@+id/menu_test_item"
-        android:title="Test item"/>
+    <item
+        android:id="@+id/menu_sign_out"
+        android:title="Sign out"
+        />
+    <item
+        android:id="@+id/menu_test_item"
+        android:title="Test item"
+        />
+    <item
+        android:id="@+id/menu_search"
+        android:icon="@drawable/ic_baseline_search_24"
+        android:title="Search"
+        app:showAsAction="always"
+        >
+
+    </item>
+
 
 </menu>
