--- a/app/src/main/res/layout/create_account_activity.xml
+++ b/app/src/main/res/layout/create_account_activity.xml
@@ -8,6 +8,20 @@
     android:background="@color/bg_teal"
     tools:context=".CreateAccountActivity">
 
+    <ProgressBar
+        android:id="@+id/password_register_progressbar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="0dp"
+        android:layout_height="24dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/rounded_corners_textbox_bg"
+        android:progress="0"
+        android:progressTint="@color/text_blue"
+        app:layout_constraintBottom_toTopOf="@+id/password_register_textbox"
+        app:layout_constraintEnd_toEndOf="@+id/return_to_login_text"
+        app:layout_constraintStart_toStartOf="@+id/return_to_login_text"
+        tools:visibility="invisible" />
+
     <EditText
         android:id="@+id/email_register_textbox"
         android:layout_width="250dp"
@@ -72,5 +86,18 @@
         app:layout_constraintEnd_toEndOf="@+id/password_register_textbox"
         app:layout_constraintStart_toStartOf="@+id/password_register_textbox"
         app:layout_constraintTop_toBottomOf="@+id/create_account_button" />
+
+    <TextView
+        android:id="@+id/password_strength_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/cabin"
+        android:text="Password strength:"
+        android:textAlignment="center"
+        android:textColor="@color/hint_blue"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/password_register_progressbar"
+        app:layout_constraintEnd_toEndOf="@+id/password_register_progressbar"
+        app:layout_constraintStart_toStartOf="@+id/password_register_progressbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
