--- a/app/src/main/res/drawable/rounded_corners_textbox_bg.xml
+++ b/app/src/main/res/drawable/rounded_corners_textbox_bg.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-    <stroke android:width="2dp" android:color="@color/text_blue"/>
+    <stroke
+        android:width="2dp"
+        android:color="@color/text_blue" />
 
     <padding
+        android:bottom="15dp"
         android:left="15dp"
         android:right="15dp"
-        android:bottom="15dp"
         android:top="15dp" />
 
 
