--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,8 @@
     <color name="verb_text_white">#FFFFFFFF</color>
     <color name="phrase_bg_purple">#666bcf</color>
     <color name="phrase_text_teal">#3DFDE0</color>
+    <color name="exam_text_white">#FFFFFFFF</color>
+    <color name="exam_bg_blue">#00388b</color>
 
 
     <color name="ivory">#FFFFF0</color>
