Revision session algorithm has been implemented and works as intended.

--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -9,6 +9,10 @@
         android:title="Sign out"
         />
     <item
+        android:id="@+id/menu_csv_import"
+        android:title="CSV import"
+        />
+    <item
         android:id="@+id/menu_test_item"
         android:title="Test item"
         />
